# Viddit

./: .gitignore  Dockerfile  MANIFEST.in  README.md  debug.ipynb  docker-compose.yaml  output.json  setup.cfg  setup.py
deployment/: download_docker.bash  exclude.txt  server_upload.bat
src/viddit/: __main__.py  output.json
src/viddit/core/: metadata.py  mongo.py  reddit_scraper.py  tts.py  video_writer.py
src/viddit/core/content_upload/: gdrive_uploader.py  tiktok_uploader.py  youtube_uploader.py
src/viddit/utils/: args_utils.py  file_util.py  logging_utils.py
viddit/: __main__.py
viddit/core/: mongo.py  reddit_scraper.py  video_writer.py
viddit/core/content_upload/: gdrive_uploader.py  youtube_uploader.py
